--- a/presentation.html
+++ b/presentation.html
@@ -24,10 +24,10 @@
 <html>
 
 <head>
-	<link href="../styles.css" media="screen" rel="stylesheet" type="text/css" />
-	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="lib/styles.css" media="screen" rel="stylesheet" type="text/css" />
+	<link href="lib/uulm/uulm.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset='utf-8'>
-	<script src='../slides.js'></script>
+	<script src='lib/slides.js'></script>
 
 	<title>HTML5 Slide Deck – uulm Style</title>
 
@@ -49,8 +49,8 @@
 				Feature Demonstration<br> HTML5 + CSS3 + some JS
 			</h2>
 			<p>
-				<img id="title-header" src='images/header_sample.jpg'> 
-				<img id="uulm-logo" src='../images/uulm_logo.svg'>
+				<img id="title-header" src='assets/images/header_sample.jpg'> 
+				<img id="uulm-logo" src='lib/uulm/uulm_logo.svg'>
 			</p>
 		</article>
 
@@ -358,7 +358,7 @@
 		<article>
 			<h3>Slide with an image</h3>
 			<p>
-				<img style='height: 400px' src='images/social_viz2.jpg'>
+				<img style='height: 400px' src='assets/images/social_viz2.jpg'>
 			</p>
 			<div class='source'>Source: Benjamin Erb</div>
 		</article>
@@ -366,7 +366,7 @@
 		<article>
 			<h3>Slide with an image (centered)</h3>
 			<p>
-				<img class='centered' style='height: 400px' src='images/social_viz2.jpg'>
+				<img class='centered' style='height: 400px' src='assets/images/social_viz2.jpg'>
 			</p>
 			<div class='source'>Source: Benjamin Erb</div>
 		</article>
@@ -374,7 +374,7 @@
 		<article class='fill'>
 			<h3>Image filling the slide (with optional header)</h3>
 			<p>
-				<img src='images/social_viz.jpg'>
+				<img src='assets/images/social_viz.jpg'>
 			</p>
 			<div class='source white'>Source: Benjamin Erb</div>
 		</article>
@@ -382,7 +382,7 @@
 
 		<article>
 			<h3>A slide with an embed + title</h3>
-			<iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
+			<iframe src='presentation.html'></iframe>
 		</article>
 
 		<article>
