added video examples

--- a/presentation.html
+++ b/presentation.html
@@ -381,19 +381,35 @@
 
 
 		<article>
+			<h3>Video example: .ogv file + HTML5 video tag</h3>
+			<p></p>
+			<video controls class="centered">
+				<source src='assets/videos/sample.ogv' type='video/ogg; codecs="theora, vorbis"'/>
+				<p>No video fallback</p>
+			</video>
+			<div class='source'>Source: http://www.808.dk/</div>
+		</article>
+		
+		
+		
+		<article>
+			<h3>Video example: Vimeo via iframe</h3>
+			<iframe src="http://player.vimeo.com/video/15612525?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="640" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		</article>		
+
+		<article>
 			<h3>A slide with an embed + title</h3>
-			<iframe src='presentation.html'></iframe>
+			<iframe src='http://www.w3.org/'></iframe>
 		</article>
 
 		<article>
-			<iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
+			<iframe src='http://www.w3.org/'></iframe>
 		</article>
 
 		<article class='fill'>
 			<h3>I'm on a iframe (fullscreen)!</h3>
-			<iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
+			<iframe src='http://www.w3.org/'></iframe>
 		</article>
-
 		<article>
 			<h3>Credits</h3>
 			<p>Thanks to Luke Mahé and Marcin Wichary for the original Google
